# MOSSN

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  usage_question.yml
.github/workflows/: ci.yml  release.yml
examples/: run_data_driven_example.py  run_example.py
src/mossn/: __init__.py  _utils.py  driven.py  example_data.py  multiomics.py  single.py
src/mossn/data/: __init__.py  string_links.csv
tests/: test_driven.py  test_examples.py  test_multilayer.py  test_single.py
