[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mossn"
version = "0.1.4"
description = "MOSSN: sample-specific protein network inference using uniform background edge weights"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Zihao Chen" }
]
keywords = ["bioinformatics", "network", "ppi", "multi-omics", "gene-expression"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "networkx>=3.0",
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mossn = ["data/*.csv"]
